--- a/catalog.html
+++ b/catalog.html
@@ -12,7 +12,7 @@
     <div class="container">
       <header class="page-header">
         <nav class="navigation">
-          <a href="index.html" class="navigation-logo">
+          <a href="#" class="navigation-logo">
             <img src="images/header/logo-city-sedona.svg" alt="Логотип Седона." class="header-logo-sedona" width="140" height="70">
           </a>
           <ul class="navigation-list">
@@ -179,7 +179,7 @@
               <ul class="hotels-list">
                 <li class="hotels-card">
                   <a href="#" class="hotels-card-link-image">
-                    <img src="images/hotels-raiting/hotel-1.jpg" alt="Amara Resort & Spa." class="hotels-card-image" width="300" height="212">
+                    <img src="images/hotels-raiting/hotel-1.jpg" alt="Вид на звездное небо." class="hotels-card-image" width="300" height="212">
                   </a>
                   <a href="#" class="hotels-card-link-title">
                     <h3 class="hotels-card-title">Amara Resort & Spa</h3>
@@ -195,7 +195,7 @@
                 </li>
                 <li class="hotels-card">
                   <a href="#" class="hotels-card-link-image">
-                    <img src="images/hotels-raiting/hotel-2.jpg" alt="Villas at Poco Diablo." class="hotels-card-image" width="300" height="212">
+                    <img src="images/hotels-raiting/hotel-2.jpg" alt="Радуга за скалой." class="hotels-card-image" width="300" height="212">
                   </a>
                   <a href="#" class="hotels-card-link-title">
                     <h3 class="hotels-card-title">Villas at Poco Diablo</h3>
@@ -211,7 +211,7 @@
                 </li>
                 <li class="hotels-card">
                   <a href="#" class="hotels-card-link-image">
-                    <img src="images/hotels-raiting/hotel-3.jpg" alt="Desert Quail Inn." class="hotels-card-image" width="300" height="212">
+                    <img src="images/hotels-raiting/hotel-3.jpg" alt="Рыжие скалы на закате." class="hotels-card-image" width="300" height="212">
                   </a>
                   <a class="hotels-card-link-title">
                     <h3 class="hotels-card-title">Desert Quail Inn</h3>
@@ -227,7 +227,7 @@
                 </li>
                 <li class="hotels-card">
                   <a href="#" class="hotels-card-link-image">
-                    <img src="images/hotels-raiting/hotel-4.jpg" alt="GreenTree Inn." class="hotels-card-image" width="300" height="212">
+                    <img src="images/hotels-raiting/hotel-4.jpg" alt="Звездное небо за рыжими скалами." class="hotels-card-image" width="300" height="212">
                   </a>
                   <a class="hotels-card-link-title">
                     <h3 class="hotels-card-title">GreenTree Inn</h3>
@@ -272,7 +272,7 @@
             <form class="subscribe-form" action="https://echo.htmlacademy.ru/" method="post">
               <label class="visually-hidden">Email</label>
               <input class="email-field" placeholder="Ваш e-mail" type="email" name="subscribe-email" id="subscribe-email">
-              <button class="button button-big subscribe-button" type="submit">Подписаться</button>
+              <button class="button button-big-font subscribe-button" type="submit">Подписаться</button>
             </form>
           </section>
         </div>
