--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container">
       <header class="page-header">
         <nav class="navigation">
-          <a href="index.html" class="navigation-logo">
+          <a href="#" class="navigation-logo">
             <img src="images/header/logo-city-sedona.svg" alt="Логотип Седона." class="header-logo-sedona" width="140" height="70">
           </a>
           <ul class="navigation-list">
@@ -55,65 +55,64 @@
         <div class="page-container">
           <section class="main-intro">
             <h1 class="visually-hidden">Добро пожаловать в Седону</h1>
-            <img src="images/welcome-title.svg" alt="welcome to the gorgeous Sedona." class="logo-welcome-title" width="458" height="352">
+            <figure class="figure-welcome-title">
+              <img src="images/welcome-title.svg" alt="Добро пожаловать в Седону." class="logo-welcome-title" width="458" height="352">
+            </figure>
           </section>
           <section class="reasons">
             <h2 class="intro-title">Седона — небольшой городок в Аризоне,<br>заслуживающий большего!</h2>
               <p class="intro-description">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
-            <h2 class="visually-hidden">Причины</h2>
             <ul class="reasons-list">
               <li class="reasons-list-row">
-                <div class="reasons-item bg-basic">
-                  <h3 class="reasons-title white">Настоящий<br> городок</h3>
+                <div class="reasons-item">
+                  <h3 class="reasons-title white-title">Настоящий<br> городок</h3>
                   <p class="reasons-description">Седона — не аттракцион для<br> туристов, там течёт своя<br> жизнь</p>
                 </div>
-                <div class="reasons-item reasons-image bg-basic">
-                  <img src="images/reason/reason-1.jpg" alt="Настоящий городок." class="reason-img" width="800" height="384">
+                <div class="reasons-item reasons-image">
+                  <img src="images/reason/reason-1.jpg" alt="Дом в городоке." class="reason-img" width="800" height="384">
                 </div>
               </li>
-              <li class="reasons-item bg-sec-1">
-                <h3 class="reasons-title advantages">Небольшая<br> площадь</h3>
+              <li class="reasons-item">
+                <h3 class="reasons-title">Небольшая<br> площадь</h3>
                 <p class="reasons-description">Все достопримечательности<br> находятся очень близко</p>
               </li>
-              <li class="reasons-item bg-sec-2">
-                <h3 class="reasons-title advantages">Красивая<br> дорога</h3>
+              <li class="reasons-item">
+                <h3 class="reasons-title">Красивая<br> дорога</h3>
                 <p class="reasons-description">Ехать в Седону из Лас-Вегаса<br> совсем не скучно!</p>
               </li>
-              <li class="reasons-item bg-sec-1">
-                <h3 class="reasons-title advantages">Мало<br> туристов</h3>
+              <li class="reasons-item">
+                <h3 class="reasons-title">Мало<br> туристов</h3>
                 <p class="reasons-description">Большинство едет в Гранд<br> Каньон и толпится там</p>
               </li>
               <li class="reasons-list-row">
-                <div class="reasons-item reasons-image bg-basic">
+                <div class="reasons-item reasons-image">
                   <img src="images/reason/reason-2.jpg" alt="Мост дьявола." class="reason-img" width="800" height="384">
                 </div>
-                <div class="reasons-item bg-basic">
-                  <h3 class="reasons-title white">Там есть<br> мост дьявола</h3>
+                <div class="reasons-item">
+                  <h3 class="reasons-title white-title">Там есть<br> мост дьявола</h3>
                   <p class="reasons-description">Да, по нему можно пройти!<br> Если вы осмелитесь,<br> разумеется</p>
                 </div>
               </li>
             </ul>
-            <ul class="reasons-list">
-              <li class="reasons-item housing bg-sec-1 services">
-                <h3 class="reasons-title services">Жильё</h3>
-                <p class="reasons-description">Рекомендуем пожить<br> в настоящем мотеле,<br> всё как в кино!</p>
+            <ul class="services-list">
+              <li class="services-item housing">
+                <h3 class="services-title">Жильё</h3>
+                <p class="services-description">Рекомендуем пожить<br> в настоящем мотеле,<br> всё как в кино!</p>
               </li>
-              <li class="reasons-item food services">
-                <h3 class="reasons-title services">Еда</h3>
-                <p class="reasons-description">Всегда заказывайте<br> топовый фирменный бургер,<br> вы не разочаруетесь!</p>
+              <li class="services-item food">
+                <h3 class="services-title">Еда</h3>
+                <p class="services-description">Всегда заказывайте<br> топовый фирменный бургер,<br> вы не разочаруетесь!</p>
               </li>
-              <li class="reasons-item souvenirs bg-sec-1 services">
-                <h3 class="reasons-title services">Сувениры</h3>
-                <p class="reasons-description">Не только китайского,<br> но и настоящего местного<br> производства!</p>
+              <li class="services-item souvenirs">
+                <h3 class="services-title">Сувениры</h3>
+                <p class="services-description">Не только китайского,<br> но и настоящего местного<br> производства!</p>
               </li>
             </ul>
           </section>
           <section class="interested">
             <h2 class="interested-title">Заинтересовались?</h2>
             <p class="interested-description">Укажите предполагаемые даты поездки,<br>и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-            <div class="button-container">
-              <a href="catalog.html" class="button button-big button-search">Поиск гостиницы в Седоне</a>
-            </div>
+            <a href="catalog.html" class="button button-big-font button-search">Поиск гостиницы в Седоне</a>
           </section>
           <section class="subscribe">
             <h2 class="subscribe-title">Подпишитесь на рассылку</h2>
@@ -121,7 +120,7 @@
             <form class="subscribe-form" action="https://echo.htmlacademy.ru/" method="post">
               <label class="visually-hidden">Email</label>
               <input class="email-field" placeholder="Ваш e-mail" type="email" name="subscribe-email" id="subscribe-email">
-              <button class="button button-big subscribe-button" type="submit">Подписаться</button>
+              <button class="button button-big-font subscribe-button" type="submit">Подписаться</button>
             </form>
           </section>
         </div>
