--- a/catalog.html
+++ b/catalog.html
@@ -78,20 +78,23 @@
                   <ul class="catalog-filter-list">
                     <li class="catalog-filter-item">
                       <label class="control">
-                        <input class="control-input" type="checkbox" name="pool" checked >
-                        Бассейн
+                        <input class="control-input visually-hidden" type="checkbox" name="pool" checked >
+                        <span class="control-mark"></span>
+                        <span class="control-label">Бассейн</span>
                       </label>
                     </li>
                     <li class="catalog-filter-item">
                       <label class="control">
-                        <input class="control-input" type="checkbox" name="parking" checked >
-                        Парковка
+                        <input class="control-input visually-hidden" type="checkbox" name="parking" checked >
+                        <span class="control-mark"></span>
+                        <span class="control-label">Парковка</span>
                       </label>
                     </li>
                     <li class="catalog-filter-item">
                       <label class="control">
-                        <input class="control-input" type="checkbox" name="wifi" >
-                        Wi-Fi
+                        <input class="control-input visually-hidden" type="checkbox" name="wifi" >
+                        <span class="control-mark"></span>
+                        <span class="control-label">Wi-Fi</span>
                       </label>
                     </li>
                   </ul>
@@ -102,40 +105,50 @@
                   <ul class="catalog-filter-list">
                     <li class="catalog-filter-item">
                       <label class="control">
-                        <input class="control-input" type="radio" name="hotels-group" value="hotel" checked>
-                        Гостиница
+                        <input class="control-input visually-hidden" type="radio" name="hotels-group" value="hotel" checked>
+                        <span class="control-mark"></span>
+                        <span class="control-label">Гостиница</span>
                       </label>
                     </li>
                     <li class="catalog-filter-item">
                       <label class="control">
-                        <input class="control-input" type="radio" name="hotels-group" value="motel">
-                        Мотель
+                        <input class="control-input visually-hidden" type="radio" name="hotels-group" value="motel">
+                        <span class="control-mark"></span>
+                        <span class="control-label">Мотель</span>
                       </label>
                     </li>
                     <li class="catalog-filter-item">
                       <label class="control">
-                        <input class="control-input" type="radio" name="hotels-group" value="apartments">
-                        Апартаменты
+                        <input class="control-input visually-hidden" type="radio" name="hotels-group" value="apartments">
+                        <span class="control-mark"></span>
+                        <span class="control-label">Апартаменты</span>
                       </label>
                     </li>
                   </ul>
                 </fieldset>
-                <!-- FIELD Стоимость scale/range -->
+                <!-- FIELD Стоимость Range-слайдер -->
                 <fieldset class="catalog-filter-price">
                   <legend class="catalog-filter-title">Стоимость, ₽:</legend>
-                  <div class="catalog-filter-all-scale">
-                    <label class="control">
-                    <input type="text" placeholder="от" value="0" class="catalog-filter-scale">
-                      от
-                    </label>
-                    <label class="control">
-                    <input type="text" placeholder="до" value="9000" class="catalog-filter-scale">
-                    до
-                    </label>
+                  <div class="range">
+                    <div class="range-wrapper-inputs"></div>
+                      <label class="filter-label-price-min">
+                        <input type="number" value="0" class="range-input-min">
+                      </label>
+                      <label class="filter-label-price-max">
+                        <input type="number" value="9000" class="range-input-max">
+                      </label>
+                    </div>
+                    <div class="range-scale">
+                      <div class="range-bar" style="left: 0; width: 226px">
+                        <button class="range-toggle toggle-min">
+                          <span class="visually-hidden">Изменить минимальную цену.</span>
+                        </button>
+                        <button class="range-toggle toggle-max">
+                          <span class="visually-hidden">Изменить максимальную цену.</span>
+                        </button>
+                      </div>
+                    </div>
                   </div>
-                  <label class="control">
-                  <input type="range" min="0" max="10" class="range-filter">
-                  </label>
                 </fieldset>
                 <div class="filter-buttons">
                   <button class="button button-filter" type="submit">Применить</button>
