--- a/index.html
+++ b/index.html
@@ -170,6 +170,60 @@
               </a>
           </section>
       </footer>
+
+      <div class="modal-container modal-container-close">
+        <div class="modal modal-hotel-search">
+          <button class="modal-close-button" type="button">
+            <span class="visually-hidden">Закрыть</span>
+          </button>
+          <section class="modal-content">
+            <h2 class="modal-title">Поиск гостиницы в Седоне</h2>
+            <form class="modal-form" action="https://echo.htmlacademy.ru/" method="post">
+              <p class="field-group">
+                <label class="modal-text" for="arrival-date-field">Дата заезда:</label>
+                <input class="modal-date-field" type="text" name="arrival-date" id="arrival-date-field" value="27 апреля 2020">
+              </p>
+              <p class="modal-description error">Мы не можем отправить вас в прошлое.</p>
+              <p class="field-group">
+                <label class="modal-text" for="departure-date-field">Дата выезда:</label>
+                <input class="modal-date-field" type="text" name="departure-date" id="departure-date-field" value="1 сентября 2023">
+              </p>
+              <p class="modal-description">На эти даты есть свободные номера. Пока есть.</p>
+
+              <div class="field-group-adults">
+                <label class="modal-text" for="adults">Взрослые:</label>
+                <button class="modal-number-button" type="button">
+                  <svg class="modal-icon" fill="currentColor" aria-hidden="true" focusable="false" width="14" height="2" viewBox="0 0 14 2" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M0 0v2h14V0H0Z"/>
+                  </svg>
+                </button>
+                <input class="modal-people-field" type="text" name="adults-number" id="adults" value="2">
+                <button class="modal-number-button" type="button">
+                  <svg class="modal-icon" fill="currentColor" aria-hidden="true" focusable="false" width="14" height="14" viewBox="0 0 14 14" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M14 6H8V0H6v6H0v2h6v6h2V8h6V6Z"/>
+                  </svg>
+                </button>
+              </div>
+              <div class="field-group-children">
+                <label class="modal-text" for="children">Дети:</label>
+                <button class="modal-number-button" type="button">
+                  <svg class="modal-icon" fill="currentColor" aria-hidden="true" focusable="false" width="14" height="2" viewBox="0 0 14 2" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M0 0v2h14V0H0Z"/>
+                  </svg>
+                </button>
+                <input class="modal-people-field" type="text" name="children-number" id="children" value="2">
+                <button class="modal-number-button" type="button">
+                  <svg class="modal-icon" fill="currentColor" aria-hidden="true" focusable="false" width="14" height="14" viewBox="0 0 14 14" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M14 6H8V0H6v6H0v2h6v6h2V8h6V6Z"/>
+                  </svg>
+                </button>
+              </div>
+              <button class="button modal-find-button" type="submit">Найти</button>
+            </form>
+          </section>
+        </div>
+      </div>
+
     </div>
   </body>
 </html>
