--- a/catalog.html
+++ b/catalog.html
@@ -13,23 +13,23 @@
     <div class="container">
       <header class="page-header">
         <nav class="navigation">
-          <a href="#" class="navigation-logo">
-            <img src="images/header/logo-city-sedona.svg" alt="Логотип Седона." class="header-logo-sedona" width="140" height="70">
+          <a class="navigation-logo" href="#">
+            <img class="header-logo-sedona" src="images/header/logo-city-sedona.svg" alt="Логотип Седона." width="140" height="70">
           </a>
           <ul class="navigation-list">
             <li class="navigation-item">
-              <a href="index.html" class="navigation-link">Главная</a>
+              <a class="navigation-link" href="index.html">Главная</a>
             </li>
             <li class="navigation-item">
-              <a href="#" class="navigation-link">О Седоне</a>
+              <a class="navigation-link" href="#">О Седоне</a>
             </li>
             <li class="navigation-item">
-              <a href="catalog.html" class="navigation-link navigation-link-current">Гостиницы</a>
+              <a class="navigation-link navigation-link-current" href="catalog.html">Гостиницы</a>
             </li>
           </ul>
           <ul class="navigation-list-user">
             <li class="navigation-item-user">
-              <a href="#" class="navigation-link-user">
+              <a class="navigation-link-user" href="#">
                 <span class="visually-hidden">Поиск.</span>
                 <svg class="navigation-icon" fill="currentColor" aria-hidden="true" focusable="false" width="19" height="19" viewBox="0 0 19 19" xmlns="http://www.w3.org/2000/svg" role="img">
                   <path d="m18.5 17-3.7-3.67c1-1.3 1.7-2.98 1.7-4.87A8 8 0 0 0 8.5.5C4.1.5.5 4.18.5 8.56a8 8 0 0 0 12.9 6.26l3.7 3.68 1.4-1.5Zm-10-2.48a6 6 0 0 1-6-5.96 6 6 0 0 1 12 0 6 6 0 0 1-6 5.96Z"/>
@@ -37,7 +37,7 @@
               </a>
             </li>
             <li class="navigation-item-user">
-              <a href="#" class="navigation-link-user">
+              <a class="navigation-link-user" href="#">
                 <span class="visually-hidden">Избранное.</span>
                 <svg class="navigation-icon" fill="currentColor" aria-hidden="true" focusable="false" width="18" height="17" viewBox="0 0 18 17" xmlns="http://www.w3.org/2000/svg" role="img">
                   <path d="M8.9 17a.9.9 0 0 1-.8-.4c-5.4-6.1-6.7-7.5-7-7.9A5.4 5.4 0 0 1 5.5 0C6.8 0 8 .5 9 1.3a5.46 5.46 0 0 1 9 4.1c0 1.3-.5 2.5-1.3 3.4l-7 7.9c-.2.2-.4.3-.8.3Zm-6-9.5c.3.4 3.5 4 6.1 6.9l6.2-7c.5-.5.7-1.2.7-2 0-1.8-1.5-3.3-3.3-3.3-1 0-2 .5-2.7 1.3-.3.3-.6.4-.9.4-.3 0-.6-.2-.8-.4-.7-.8-1.7-1.3-2.7-1.3-1.8 0-3.3 1.5-3.3 3.3-.1.9.3 1.6.7 2.1-.1 0-.1 0 0 0Z"/>
@@ -46,20 +46,20 @@
               </a>
             </li>
             <li class="navigation-item-user">
-              <a href="#" class="button button-navigation">Хочу сюда!</a>
+              <a class="button button-navigation" href="#">Хочу сюда!</a>
             </li>
           </ul>
         </nav>
       </header>
 
-      <main class="main-inner main-container">
+      <main class="main-container">
         <div class="page-container">
           <div class="inner-header-container">
             <div class="inner-header-breadcrumbs">
               <h1 class="inner-header-title">Гостиницы Седоны</h1>
               <ul class="breadcrumbs">
                 <li class="breadcrumbs-item">
-                  <a href="index.html" class="breadcrumbs-link">
+                  <a class="breadcrumbs-link" href="index.html">
                     <span class="visually-hidden">Главная.</span>
                     <svg class="breadcrumbs-icon" fill="currentColor" aria-hidden="true" focusable="false" width="13" height="13" viewBox="0 0 13 13" xmlns="http://www.w3.org/2000/svg" role="img">
                       <path d="m6.5.5-6 5.8v6.2h12V6.3L6.5.5Zm5 11h-10V6.7l5-4.8 5 4.8v4.8Z"/><path d="M4.5 10.5h1V8h2v2.5h1V7h-4v3.5Z"/>
@@ -134,10 +134,10 @@
                   <div class="range">
                     <div class="range-wrapper-inputs">
                       <label class="filter-label-price-min" for="range-input-min">
-                        <input type="number" value="0" class="range-input-min" id="range-input-min">
+                        <input class="range-input-min" type="number" value="0" id="range-input-min">
                       </label>
                       <label class="filter-label-price-max" for="range-input-max">
-                        <input type="number" value="9000" class="range-input-max" id="range-input-max">
+                        <input class="range-input-max" type="number" value="9000" id="range-input-max">
                       </label>
                     </div>
                     <div class="range-scale">
@@ -170,19 +170,19 @@
                 <option value="popular">Сначала популярные</option>
               </select>
               <div class="search-results-buttons">
-                <a href="#" class="card-grid-toggle card-grid-toggle-current">
+                <a class="card-grid-toggle card-grid-toggle-current" href="#">
                   <span class="visually-hidden">Показать таблицу.</span>
                   <svg aria-hidden="true" focusable="false" width="16" height="14" viewBox="0 0 16 14" fill="none" xmlns="http://www.w3.org/2000/svg" role="img">
                     <path d="M4 0H0v6h4V0ZM16 0h-4v6h4V0ZM10 0H6v6h4V0ZM4 8H0v6h4V8ZM16 8h-4v6h4V8ZM10 8H6v6h4V8Z" fill="#000"/>
                   </svg>
                 </a>
-                <a href="#" class="card-grid-toggle">
+                <a class="card-grid-toggle" href="#" >
                   <span class="visually-hidden">Показать слайдшоу.</span>
                   <svg aria-hidden="true" focusable="false" width="16" height="14" viewBox="0 0 16 14" fill="none" xmlns="http://www.w3.org/2000/svg" role="img">
                     <path d="M16 12H0v2h16v-2ZM14 2v6H2V2h12Zm2-2H0v10h16V0Z" fill="#000"/>
                   </svg>
                 </a>
-                <a href="#" class="card-grid-toggle">
+                <a class="card-grid-toggle" href="#">
                   <span class="visually-hidden">Показать список.</span>
                   <svg aria-hidden="true" focusable="false" width="16" height="14" viewBox="0 0 16 14" fill="none" xmlns="http://www.w3.org/2000/svg" role="img">
                     <path d="M2 0H0v2h2V0ZM16 0H4v2h12V0ZM2 4H0v2h2V4ZM16 4H4v2h12V4ZM2 8H0v2h2V8ZM16 8H4v2h12V8ZM2 12H0v2h2v-2ZM16 12H4v2h12v-2Z" fill="#000"/>
@@ -194,15 +194,15 @@
             <div class="all-search-results">
               <ul class="hotels-list">
                 <li class="hotels-card">
-                  <a href="#" class="hotels-card-link-image">
-                    <img src="images/hotels-raiting/hotel-1.jpg" alt="Вид на звездное небо." class="hotels-card-image" width="300" height="212">
+                  <a class="hotels-card-link-image" href="#">
+                    <img class="hotels-card-image" src="images/hotels-raiting/hotel-1.jpg" alt="Вид на звездное небо."  width="300" height="212">
                   </a>
-                  <a href="#" class="hotels-card-link-title">
+                  <a class="hotels-card-link-title" href="#" >
                     <h3 class="hotels-card-title">Amara Resort & Spa</h3>
                   </a>
                   <span class="hotels-card-group">Гостиница</span>
                   <span class="hotels-card-price">От 4000 ₽</span>
-                  <a href="#" class="button hotels-card-button button-more">подробнее</a>
+                  <a class="button hotels-card-button button-more" href="#" >подробнее</a>
                   <button class="button hotels-card-button button-favorite" type="button">в избранное</button>
                   <div class="hotels-card-stars four-stars">
                     <span class="visually-hidden">4 звезды.</span>
@@ -210,15 +210,15 @@
                   <span class="hotels-card-raiting">Рейтинг: 8,5</span>
                 </li>
                 <li class="hotels-card">
-                  <a href="#" class="hotels-card-link-image">
-                    <img src="images/hotels-raiting/hotel-2.jpg" alt="Радуга за скалой." class="hotels-card-image" width="300" height="212">
+                  <a class="hotels-card-link-image" href="#" >
+                    <img class="hotels-card-image" src="images/hotels-raiting/hotel-2.jpg" alt="Радуга за скалой." width="300" height="212">
                   </a>
-                  <a href="#" class="hotels-card-link-title">
+                  <a class="hotels-card-link-title" href="#" >
                     <h3 class="hotels-card-title">Villas at Poco Diablo</h3>
                   </a>
                   <span class="hotels-card-group">Гостиница</span>
                   <span class="hotels-card-price">От 5000 ₽</span>
-                  <a href="#" class="button hotels-card-button button-more">подробнее</a>
+                  <a class="button hotels-card-button button-more" href="#" >подробнее</a>
                   <button class="button hotels-card-button button-favorite button-favorite-active" type="button">в избранном</button>
                   <div class="hotels-card-stars four-stars">
                     <span class="visually-hidden">4 звезды.</span>
@@ -226,15 +226,15 @@
                   <span class="hotels-card-raiting">Рейтинг: 9,2</span>
                 </li>
                 <li class="hotels-card">
-                  <a href="#" class="hotels-card-link-image">
-                    <img src="images/hotels-raiting/hotel-3.jpg" alt="Рыжие скалы на закате." class="hotels-card-image" width="300" height="212">
+                  <a class="hotels-card-link-image" href="#" >
+                    <img class="hotels-card-image" src="images/hotels-raiting/hotel-3.jpg" alt="Рыжие скалы на закате." width="300" height="212">
                   </a>
                   <a class="hotels-card-link-title">
                     <h3 class="hotels-card-title">Desert Quail Inn</h3>
                   </a>
                   <span class="hotels-card-group">Гостиница</span>
                   <span class="hotels-card-price">От 2500 ₽</span>
-                  <a href="#" class="button hotels-card-button button-more">подробнее</a>
+                  <a class="button hotels-card-button button-more" href="#" >подробнее</a>
                   <button class="button hotels-card-button button-favorite" type="button">в избранное</button>
                   <div class="hotels-card-stars three-stars">
                     <span class="visually-hidden">3 звезды.</span>
@@ -242,15 +242,15 @@
                   <span class="hotels-card-raiting">Рейтинг: 6,9</span>
                 </li>
                 <li class="hotels-card">
-                  <a href="#" class="hotels-card-link-image">
-                    <img src="images/hotels-raiting/hotel-4.jpg" alt="Звездное небо за рыжими скалами." class="hotels-card-image" width="300" height="212">
+                  <a class="hotels-card-link-image" href="#" >
+                    <img class="hotels-card-image" src="images/hotels-raiting/hotel-4.jpg" alt="Звездное небо за рыжими скалами." width="300" height="212">
                   </a>
                   <a class="hotels-card-link-title">
                     <h3 class="hotels-card-title">GreenTree Inn</h3>
                   </a>
                   <span class="hotels-card-group">Гостиница</span>
                   <span class="hotels-card-price">От 1500 ₽</span>
-                  <a href="#" class="button hotels-card-button button-more">подробнее</a>
+                  <a class="button hotels-card-button button-more" href="#">подробнее</a>
                   <button class="button hotels-card-button button-favorite" type="button">в избранное</button>
                   <div class="hotels-card-stars two-stars">
                     <span class="visually-hidden">2 звезды.</span>
@@ -260,24 +260,25 @@
               </ul>
             </div>
             <!-- PAGINATION -->
+            <h2 class="visually-hidden">Страницы с результатами поиска.</h2>
             <ul class="pagination">
               <li class="pagination-item">
-                <a href="#" class="pagination-link pagination-current">1</a>
+                <a class="pagination-link pagination-current" href="#">1</a>
               </li>
               <li class="pagination-item">
-                <a href="#" class="pagination-link">2</a>
+                <a class="pagination-link" href="#" >2</a>
               </li>
               <li class="pagination-item">
-                <a href="#" class="pagination-link">3</a>
+                <a class="pagination-link" href="#">3</a>
               </li>
               <li class="pagination-item">
-                <a href="#" class="pagination-link">4</a>
+                <a class="pagination-link" href="#">4</a>
               </li>
               <li class="pagination-item">
-                <a href="#" class="pagination-link pagination-next">...</a>
+                <a class="pagination-link pagination-next" href="#" >...</a>
               </li>
               <li class="pagination-item">
-                <a href="#" class="pagination-link">10</a>
+                <a class="pagination-link" href="#">10</a>
               </li>
             </ul>
           </section>
@@ -299,7 +300,7 @@
           <h2 class="visually-hidden">Социальные сети.</h2>
           <ul class="footer-social-list">
             <li class="footer-social-item">
-              <a href="https://vk.com/htmlacademy" class="button-socials">
+              <a class="button-socials" href="https://vk.com/htmlacademy">
                 <span class="visually-hidden">Vkontakte.</span>
                 <svg class="button-socials-icon" fill="currentColor" aria-hidden="true" focusable="false" width="25" height="15" viewBox="0 0 25 15" xmlns="http://www.w3.org/2000/svg" role="img">
                   <path fill-rule="evenodd" clip-rule="evenodd" d="M24.12 1.8c.16-.54 0-.94-.8-.94H20.7c-.67 0-.98.34-1.15.73 0 0-1.33 3.2-3.22 5.27-.61.6-.9.8-1.23.8-.16 0-.41-.2-.41-.75v-5.1c0-.66-.19-.95-.74-.95H9.82c-.42 0-.67.3-.67.59 0 .62.95.76 1.04 2.51v3.8c0 .83-.15.98-.48.98-.9 0-3.06-3.2-4.34-6.88-.25-.72-.5-1-1.18-1H1.57c-.75 0-.9.34-.9.73 0 .68.89 4.07 4.14 8.55 2.17 3.06 5.23 4.72 8 4.72 1.68 0 1.88-.37 1.88-1v-2.32c0-.74.16-.88.7-.88.38 0 1.05.19 2.6 1.66 1.79 1.75 2.08 2.54 3.08 2.54h2.63c.75 0 1.12-.37.9-1.1-.23-.72-1.08-1.77-2.2-3.02-.62-.71-1.54-1.48-1.82-1.86-.39-.5-.28-.71 0-1.15 0 0 3.2-4.42 3.54-5.93Z"/>
@@ -307,7 +308,7 @@
               </a>
             </li>
             <li class="footer-social-item">
-              <a href="https://t.me/htmlacademy " class="button-socials">
+              <a class="button-socials" href="https://t.me/htmlacademy">
                 <span class="visually-hidden">Telegram.</span>
                 <svg  class="button-socials-icon" fill="currentColor" aria-hidden="true" focusable="false" width="18" height="16" viewBox="0 0 18 16" xmlns="http://www.w3.org/2000/svg" role="img">
                   <path d="M16.79.96.84 7.1c-1.09.44-1.08 1.05-.2 1.32l4.1 1.28 9.47-5.98c.44-.27.85-.13.52.17l-7.68 6.93-.28 4.22c.41 0 .6-.2.83-.41l1.99-1.94 4.13 3.06c.77.42 1.31.2 1.5-.71l2.72-12.8c.28-1.1-.43-1.61-1.16-1.28Z"/>
@@ -315,7 +316,7 @@
               </a>
             </li>
             <li class="footer-social-item">
-              <a href="https://www.youtube.com/user/htmlacademyru" class="button-socials">
+              <a class="button-socials" href="https://www.youtube.com/user/htmlacademyru">
                 <span class="visually-hidden">YouTube.</span>
                 <svg class="button-socials-icon" fill="currentColor" aria-hidden="true" focusable="false" width="22" height="17" viewBox="0 0 22 17" xmlns="http://www.w3.org/2000/svg" role="img">
                   <path d="M18.607 0H3.17413C1.31343 0 0 1.59375 0 3.4V13.4937C0 15.4062 1.31343 17 3.17413 17H18.8259C20.4677 17 22 15.4063 22 13.6V3.4C21.7811 1.59375 20.4677 0 18.607 0ZM7.66169 12.5375V4.4625L14.995 8.5L7.66169 12.5375Z"/>
@@ -326,11 +327,11 @@
         </section>
         <section class="footer-phone">
           <h2 class="visually-hidden">Контактный номер.</h2>
-          <a href="tel:+78128121212" class="phone">+7 (812) 812-12-12</a>
+          <a class="phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
         </section>
         <section class="footer-about-text">
           <h2 class="visually-hidden">Сделано в HTML Academy.</h2>
-            <a href="https://htmlacademy.ru/" class="footer-about-logo">
+            <a class="footer-about-logo" href="https://htmlacademy.ru/">
               <svg class="footer-about-logo-icon" fill="currentColor" aria-hidden="true" focusable="false" width="115" height="34" viewBox="0 0 115 34" xmlns="http://www.w3.org/2000/svg" role="img">
                 <path d="M0 13.26v2.6h2.5v-2.6H0ZM11.6 4.86c-1.6 0-2.8.7-3.6 1.7h-.1V.36h-2v15.5h2v-5.3c0-2.1 1.3-3.6 3.3-3.6 1.8 0 2.9 1.4 2.9 3.2v5.7h2v-6.1c.1-3-1.8-4.9-4.5-4.9ZM26.6 5.16h-4.8v-3.7h-2v3.8h-1.9v2h1.9v6c0 1.7 1 2.7 2.7 2.7h4.1v-2h-3.7c-.7 0-1.1-.4-1.1-1.1v-5.7h4.8v-2ZM41.1 4.96c-1.6 0-2.9.8-3.5 2.1h-.1c-.6-1.2-1.8-2.1-3.4-2.1-1.4 0-2.5.8-3.1 1.8h-.1v-1.6H29v10.6h2v-5.4c0-2 1-3.5 2.6-3.5 1.5 0 2.4 1 2.4 2.6v6.3h2v-5.6c0-2.4 1.4-3.3 2.6-3.3 1.5 0 2.4 1 2.4 2.6v6.3h2v-6.5c.1-2.5-1.4-4.3-3.9-4.3ZM47.8 13.06c0 1.7 1 2.7 2.8 2.7h2v-2h-1.7c-.7 0-1.1-.4-1.1-1.1V.36h-2v12.7ZM28.9 20.06c-.9-1.1-2.2-1.8-3.9-1.8-3.1 0-5.4 2.3-5.4 5.6s2.3 5.6 5.4 5.6c1.8 0 3-.8 3.8-1.9h.1v1.6h2v-10.6h-2v1.5Zm-3.6 7.4c-2.2 0-3.6-1.6-3.6-3.6s1.4-3.6 3.6-3.6 3.6 1.6 3.6 3.6c0 1.9-1.4 3.6-3.6 3.6ZM44.2 22.36c-.5-2.4-2.6-4.1-5.4-4.1a5.4 5.4 0 0 0-5.6 5.6c0 3.1 2.2 5.6 5.6 5.6 2.8 0 4.9-1.8 5.4-4.2h-2.1a3.4 3.4 0 0 1-3.3 2.3c-2.2 0-3.6-1.6-3.6-3.6s1.4-3.6 3.6-3.6c1.6 0 2.8 1 3.3 2.2h2.1v-.2ZM55.1 20.06c-.9-1.1-2.2-1.8-3.9-1.8-3.1 0-5.4 2.3-5.4 5.6s2.3 5.6 5.4 5.6c1.8 0 3-.8 3.8-1.9h.1v1.6h2v-10.6h-2v1.5Zm-3.6 7.4c-2.2 0-3.6-1.6-3.6-3.6s1.4-3.6 3.6-3.6 3.6 1.6 3.6 3.6c0 1.9-1.5 3.6-3.6 3.6ZM68.7 20.16c-.9-1.1-2.2-1.9-3.9-1.9-3.1 0-5.4 2.3-5.4 5.6s2.2 5.6 5.4 5.6c1.7 0 3-.8 3.8-1.8h.1v1.5h2v-15.4h-2v6.4Zm-3.6 7.3c-2.2 0-3.6-1.6-3.6-3.6s1.4-3.6 3.6-3.6 3.6 1.6 3.6 3.6c-.1 2-1.5 3.6-3.6 3.6ZM78.3 18.26c-3.3 0-5.5 2.5-5.5 5.6 0 3 2.1 5.6 5.5 5.6 2.5 0 4.5-1.3 5.2-3.6h-2.1c-.5 1-1.6 1.6-3 1.6-1.9 0-3.3-1.3-3.4-2.9h8.8c.2-3.6-2-6.3-5.5-6.3Zm0 1.9c1.7 0 3 1 3.3 2.6h-6.5c.3-1.5 1.5-2.6 3.2-2.6ZM98.2 18.26c-1.6 0-2.9.8-3.6 2h-.1c-.6-1.2-1.8-2-3.4-2-1.4 0-2.5.7-3.1 1.8v-1.5h-1.9v10.6h2v-5.4c0-2 1-3.4 2.6-3.5 1.5 0 2.4 1 2.4 2.6v6.3h2v-5.6c0-2.4 1.4-3.3 2.6-3.3 1.5 0 2.4 1 2.4 2.6v6.3h2v-6.5c.1-2.6-1.4-4.4-3.9-4.4ZM109.4 27.36l-3.6-8.9h-2.2l4.8 11.6c-.3.9-.7 1.2-1.7 1.2h-2.5v2h2.5c1.8 0 2.8-.8 3.5-2.6l4.7-12.2h-2.1l-3.4 8.9Z" />
               </svg>
