--- a/catalog.html
+++ b/catalog.html
@@ -13,7 +13,7 @@
     <div class="container">
       <header class="page-header">
         <nav class="navigation">
-          <a class="navigation-logo" href="#">
+          <a class="navigation-logo" href="index.html">
             <img class="header-logo-sedona" src="images/header/logo-city-sedona.svg" alt="Логотип Седона." width="140" height="70">
           </a>
           <ul class="navigation-list">
